Simplify Dockerfile